// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrashReporter adds content and sections 1`] = `
"Label:
  Value
"
`;

exports[`CrashReporter adds content and sections 2`] = `
"Label:
  Value

SECTION 1
=========

Foo:
  Value
Bar:
  Value 1 - Value 2
"
`;

exports[`CrashReporter adds content and sections 3`] = `
"Label:
  Value

SECTION 1
=========

Foo:
  Value
Bar:
  Value 1 - Value 2

SECTION 2
=========

Baz:
  123
"
`;

exports[`CrashReporter reports binaries 1`] = `
"
BINARIES
========

Node:
  0.0.0 - /node
NPM:
  0.0.0 - /npm
Yarn:
  0.0.0 - /yarn
"
`;

exports[`CrashReporter reports environment variables 1`] = `
"
ENVIRONMENT
===========

BAR:
  bar
BAZ:
  baz
FOO:
  foo
"
`;

exports[`CrashReporter reports package versions (scoped) 1`] = `
"
BEEMO
=====

@beemo/cli:
  1.0.8
@beemo/core:
  1.1.2
@beemo/dependency-graph:
  1.0.1
@beemo/driver-babel:
  1.2.1
@beemo/driver-eslint:
  1.2.1
@beemo/driver-jest:
  1.2.0
@beemo/driver-prettier:
  1.2.1
@beemo/driver-typescript:
  1.3.1
"
`;

exports[`CrashReporter reports package versions 1`] = `
"
PACKAGES
========

path-case:
  2.1.1
path-dirname:
  1.0.2
path-exists:
  3.0.0
path-is-absolute:
  1.0.1
path-key:
  2.0.1
path-parse:
  1.0.6
path-type:
  3.0.0
"
`;
